--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,22 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "ts-node src/index.ts",
+        "start": "nodemon --exec ts-node src/index.ts",
         "build": "tsc"
     },
     "author": "Premnarayan Patel",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "express": "^4.21.1"
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "node-telegram-bot-api": "^0.66.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
         "@types/node": "^22.7.9",
+        "@types/node-telegram-bot-api": "^0.64.7",
+        "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.3"
     }
