--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@supabase/supabase-js": "^2.45.6",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "node-telegram-bot-api": "^0.66.0"
