--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@graphql-tools/schema": "^10.0.7",
         "@supabase/supabase-js": "^2.45.6",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "graphql": "^16.9.0",
+        "graphql-yoga": "^5.7.0",
         "node-telegram-bot-api": "^0.66.0"
     },
     "devDependencies": {
