--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec ts-node src/index.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "author": "Premnarayan Patel",
     "license": "ISC",
@@ -20,8 +20,10 @@
         "node-telegram-bot-api": "^0.66.0"
     },
     "devDependencies": {
+        "@types/dotenv": "^8.2.3",
         "@types/express": "^5.0.0",
-        "@types/node": "^22.7.9",
+        "@types/graphql": "^14.5.0",
+        "@types/node": "^22.8.1",
         "@types/node-telegram-bot-api": "^0.64.7",
         "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
